# edward

./: .cproject  .gitignore  .kaba-repo  .project  CMakeLists.txt  CMakePresets.json  Edward.sln  Edward.vcxproj  Edward.vcxproj.filters  check.sh  default.theme  edward.sln  edward.vcxproj  edward.vcxproj.filters  keys.txt  meson.build  update.sh  vcpkg.json  xmake.conf
Data/: admin_database.txt  config.txt  hui_resources.txt  keys (Kopie).txt  keys.txt  michisoft-edward.desktop  michisoft-x-font.xml  michisoft-x-material.xml  michisoft-x-model.xml  michisoft-x-terrain.xml  michisoft-x-world.xml  scriptvars_fantasy_item.txt  scriptvars_fantasy_object.txt  scriptvars_fantasy_world.txt
Plugins/: Animation - globbering.kaba  Animation - import annotation.kaba  Model - And.kaba  Model - CreateDodecahedron.kaba  Model - CreateGon.kaba  Model - CreateTree.kaba  Model - ExportJSON.kaba  Model - ExportSTL.kaba  Model - NormalsTest.kaba  Model - SubtractTest.kaba  Model - TorusKnot.kaba  PsMove.kaba  World - CreateArmy.kaba  annotate-find-camera.kaba  annotate-video-animation.kaba  annotate-video-animation2.kaba  api.kaba  edward.kaba  helper.kaba  test.kaba
Plugins/Model/: And.kaba  Create Dodecahedron.kaba  Create Gon.kaba  Create Iso Surface.kaba  Create Tree.kaba  Export JSON.kaba  Export Ray Topology.kaba  Export STL.kaba  Extrude Tetrahedron.kaba  Test Normals.kaba  Test Subtract.kaba  Torus Knot.kaba
Plugins/Shader Graph/: X.kaba  functions  vars
Plugins/helper/: psmove.kaba
gui/: 000_Text.hui  AdministrationDialog.hui  AdministrationMenu.hui  CamPointDialog.hui  CodingMenu.hui  CodingToolbar.hui  ComponentSelectionDialog.hui  EdwardConfigurationDialog.hui  FontDialog.hui  FontMenu.hui  FontToolbar.hui  GameConfigurationDialog.hui  GameExportDialog.hui  GameNewDialog.hui  KeyDialog.hui  MaterialDialog.hui  MaterialMenu.hui  MaterialPanel.hui  MaterialParameterPanel.hui  MaterialPassPanel.hui  MaterialRenderPassDialog.hui  MaterialRenderPassListPopup.hui  MaterialSoundDialog.hui  MaterialTextureListPopup.hui  MaterialToolbar.hui  ModelAnimationDialog.hui  ModelAnimationPopup.hui  ModelAnimationSkeletonToolbar.hui  ModelAnimationVertexToolbar.hui  ModelBrushDialoh.hui  ModelDeformationBrushDialog.hui  ModelDeformationCylinderDialog.hui  ModelDeformationDialog.hui  ModelDeformationFunctionDialog.hui  ModelEasifyDialog.hui  ModelFXDialog.hui  ModelGeometryMenu.hui  ModelGeometryMenu.hui_old  ModelMaterialDialog.hui  ModelMaterialMenu.hui  (+62 more)
old-src/: Edward-prev._cpp  EdwardWindow.h
old-src/action/: ActionMultiView.cpp  ActionMultiView.h
old-src/mode/: Mode.h  ModeNone.cpp
old-src/multiview/: ActionController.cpp  ActionController.h  CameraController.cpp  ColorScheme.cpp  DrawingHelper.h  LinearToSrgbRenderer.h  MouseWrapper.h  Window.cpp  Window.h
old-src/stuff/: Clipboard.cpp  Progress.cpp  Progress.h
plugins/: PsMove.kaba  edward.kaba  helper.kaba  test.kaba
plugins/edward/: .kaba-package  edward.kaba
plugins/helper/: psmove.kaba
plugins/model/: And.kaba  Create Dodecahedron.kaba  Create Fur.kaba  Create Gon.kaba  Create Iso Surface.kaba  Create Points On Surface.kaba  Create Tree.kaba  Export JSON.kaba  Export Ray Topology.kaba  Export STL.kaba  Extrude Tetrahedron.kaba  Test Normals.kaba  Test Subtract.kaba  Torus Knot.kaba
plugins/shader graph/: functions  vars
plugins/world/: CreateArmy.kaba
src/: Edward.cpp  Edward.h  EdwardWindow.cpp  EdwardWindow.h  Makefile  Makefile-no-psmove  Makefile-psmove  MultiView.cpp  MultiView.h  Session.cpp  Session.h  graphics-fwd.h  graphics-impl.h  main.cpp  meta.cpp  meta.h  xmake.conf
src/Action/: Action.cpp  Action.h  ActionAtom.cpp  ActionAtom.h  ActionGroup.cpp  ActionGroup.h  ActionManager.cpp  ActionManager.h  ActionMultiView.cpp  ActionMultiView.h
src/Data/: Data.cpp  Data.h
src/Mode/: Mode.cpp  Mode.h  ModeCreation.cpp  ModeCreation.h  ModeNone.cpp  ModeNone.h
src/MultiView/: ActionController.cpp  ActionController.h  CameraController.cpp  CameraController.h  ColorScheme.cpp  ColorScheme.h  DrawingHelper.cpp  DrawingHelper.h  MouseWrapper.cpp  MultiView.cpp  MultiView.h  MultiViewImpl.cpp  MultiViewImpl.h  MultiViewInterface.cpp  MultiViewInterface_.h  MultiViewWindow.cpp  MultiViewWindow.h  SingleData.cpp  SingleData.h  Window.cpp  Window.h
src/Storage/: Storage.cpp  Storage.h
src/Stuff/: BrushPanel.cpp  BrushPanel.h  EmbeddedDialog.cpp  EmbeddedDialog.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  PluginManager.cpp  PluginManager.h  Progress.cpp  Progress.h
src/action/: Action.cpp  Action.h  ActionGroup.cpp  ActionManager.cpp  ActionManager.h  ActionMultiView.cpp  ActionMultiView.h
src/data/: Data.cpp  Data.h
src/gui/: 000_Text.hui  00_hui_ids.h  00_hui_resources.txt  AdministrationDialog.hui  AdministrationMenu.hui  AnimationDialog.hui  CamPointDialog.hui  FontDialog.hui  FontMenu.hui  GameConfigurationDialog.hui  GameExportDialog.hui  ItemDialog.hui  ItemMenu.hui  ItemToolBar.hui  KeyDialog.hui  MaterialAppearanceDialog.hui  MaterialDialog.hui  MaterialMenu.hui  MaterialPhysicsDialog.hui  ModelAnimationDialog.hui  ModelEasifyDialog.hui  ModelFXDialog.hui  ModelMaterialDialog.hui  ModelMaterialSelectionDialog.hui  ModelMenu.hui  ModelMoveMenu.hui  ModelNewBallDialog.hui  ModelNewCubeDialog.hui  ModelNewCylinderDialog.hui  ModelNewPlaneDialog.hui  ModelNewTeapotDialog.hui  ModelNewTorusDialog.hui  ModelPropertiesDialog.hui  ModelSizingDialog.hui  ModelSkeletonMenu.hui  ModelTextureLevelDialog.hui  ModelTextureMenu.hui  NewAnimationDialog.hui  NewTerainDialog.hui  NoModeMenu.hui  (+22 more)
src/lib/: 00_config.h  config.h
src/mode/: Mode.cpp  Mode.h  ModeCreation.cpp  ModeCreation.h  ModeNone.cpp  ModeNone.h
src/mode_coding/: ModeCoding.cpp  ModeCoding.h
src/mode_material/: ModeMaterial.cpp  ModeMaterial.h
src/mode_model/: ModeAddPolygon.cpp  (+7 more)
static/: default.theme  hui_resources.txt  keys.txt  license_small.txt  michisoft-edward.desktop  michisoft-x-font.xml  michisoft-x-model.xml  michisoft-x-terrain.xml  michisoft-x-world.xml
tools/: _check_materials.sh  _templatify.sh
(+2695 files in other folders)
